1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tkobjc.m (initTkObjc): Update to renamed tkobjc_registerCommand.

	* simtools.tcl: Add `super' bitmap.

	* control.[hm]: Prefix everybody with "tkobjc_".  Add
	tkobjc_configureHideBitmap, tkobjc_configureSpecialBitmap,
	tkobjc_configureSuperBitmap, tkobjc_configureWidgetToBeep,
	tkobjc_configureWidgetToDrop,
	tkobjc_configureWidgetToPackBeforeAndFillLeftThenDisableAndResize,
	tkobjc_bindButton3ToSpawn, tkobjc_bindButton3ToArgSpawn,
	tkobjc_bindButton3ToBeUnhelpful, tkobjc_bindReturnToSetValue,
	tkobjc_bindKeyReleaseReturnToResetColorAndUpdate,
	tkobjc_bindFocusInToSetSelection,
	tkobjc_bindFocusOutToClearSelection, and tkobjc_gimme_ddobj.
	Renamed tkobjc_bindButton3ForCompleteProbeDisplay from
	configureButton3ForCompleteProbeDisplay, tkobjc_bindWindowEntry
	from configureWindowEntry, tkobjc_bindWindowExit from
	configureWindowExit.
	
1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* control.m (dynamicEval): Add.

	* control.h: Add dynamicEval.

	* InputWidget.m ([InputWidget -setValue:]): Constify argument.
	Reformatting throughout.
	([InputWidget -linkVariable:Type:]): Cast variableName to char*
	for Tcl_UnlinkVar and TclLinkVar.
	([InputWidget -createEnd]): Add char * buf variable to
	write the value for variableName.

	* InputWidget.h (InputWidget): Constify variableName.
	Constify argument to setValue.
	Reformatting throughout.

	* Entry.m ([Entry -setValue:]): Constify argument.
	Reformatting throughout.

	* Entry.h (InputWidget): Reformatting throughout.

	* CheckButton.m (stringIsFalse): Constify argument.
	([CheckButton -setValue:]): Constify argument.
	Reformatting throughout.

	* CheckButton.h: Reformatting throughout.

	* analysis.tcl: New file.

	* simtools.tcl: New file.

	* tkobjc.m: Include tkobjc/control.h.  include simtools_tcl.x and
	analysis_tcl.x.
	(initTkObjc): Add check for batchmode.  In this case, set
	globalTkInterp to Tcl and return.  Remove text of analysis EZBin Tcl