@@ -11,24 +11,25 @@
 
 int Blt_Init(Tcl_Interp *);			  // wish this were declared..
 
-- (char *) preInitWithArgc: (int)argc argv: (char**)argv {
-  char * filename;
+- (const char *) preInitWithArgc: (int)argc argv: (char**)argv
+{
+  const char *filename;
   
   filename = [super preInitWithArgc: argc argv: argv];
 
   // now init extras widget sets.
 
-  if (Blt_Init(interp) == TCL_ERROR) {
-    char *msg = Tcl_GetVar(interp, "errorInfo", TCL_GLOBAL_ONLY);
-    if (msg == NULL) {
-      msg = interp->result;
+  if (Blt_Init(interp) == TCL_ERROR)
+    {
+      char *msg = Tcl_GetVar(interp, "errorInfo", TCL_GLOBAL_ONLY);
+      if (msg == NULL)
+        msg = interp->result;
+      [self error:msg];
+      return NULL;				  // shouldn't get here anyway
     }
-    [self error:msg];
-    return NULL;				  // shouldn't get here anyway
-  }
-
+  
   [self eval: "wm withdraw ."];			  // don't map "."
-
+  
   // general problem: better mechanism for assigning bindings.
   // note, the "%s" indirection in eval: is necessary to hide %s from eval:
   // Death to Motif lossage! Delete should delete the character to the left.
